WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171733
std::min used without including algorithm
https://bugs.webkit.org/show_bug.cgi?id=171733
Summary
std::min used without including algorithm
Ting-Wei Lan
Reported
2017-05-05 09:55:48 PDT
This causes compilation error on FreeBSD: In file included from /path/to/WebKit/Source/WebCore/html/track/VTTScanner.cpp:31: In file included from /path/to/WebKit/Source/WebCore/html/track/VTTScanner.h:32: In file included from /path/to/WebKit/Source/WebCore/html/parser/ParsingUtilities.h:33: /path/to/WebKit/Source/WTF/wtf/text/StringCommon.h:482:21: error: no member named 'min' in namespace 'std' return std::min(startOffset, sourceStringLength); ~~~~~^ /path/to/WebKit/Source/WTF/wtf/text/StringCommon.h:567:21: error: no member named 'min' in namespace 'std' return std::min(start, haystack.length()); ~~~~~^ 2 errors generated.
Attachments
Patch
(1019 bytes, patch)
2017-05-05 09:59 PDT
,
Ting-Wei Lan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ting-Wei Lan
Comment 1
2017-05-05 09:59:03 PDT
Created
attachment 309179
[details]
Patch
WebKit Commit Bot
Comment 2
2017-05-12 15:05:28 PDT
Comment on
attachment 309179
[details]
Patch Clearing flags on attachment: 309179 Committed
r216796
: <
http://trac.webkit.org/changeset/216796
>
WebKit Commit Bot
Comment 3
2017-05-12 15:05:29 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug