Include algorithm before using std::min https://bugs.webkit.org/show_bug.cgi?id=171733

Patch by Ting-Wei Lan <lantw44@gmail.com> on 2017-05-12
Reviewed by Chris Dumez.

* wtf/text/StringCommon.h:

Canonical link: https://commits.webkit.org/188991@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216796 268f45cc-cd09-0410-ab3c-d52691b4dbfc