Source/WTF/wtf/text/StringCommon.h
@@ -26,6 +26,7 @@
 #ifndef StringCommon_h
 #define StringCommon_h
 
+#include <algorithm>
 #include <unicode/uchar.h>
 #include <wtf/ASCIICType.h>
 #include <wtf/NotFound.h>
